# DownloadsOrganizeR

./: .gitignore  .pylintrc  ARCHITECTURE_COMPLIANCE_REVIEW.md  ARCHITECTURE_REVIEW_FINDINGS.md  AUTHENTICATION.md  AUTH_COMPARISON.md  AUTH_IMPLEMENTATION.md  AUTH_QUICK_REFERENCE.md  BACKEND_OPTIMIZATIONS.md  C:\Scripts\downloads_dashboard.json  CHANGELOG.md  CHANGELOG_AUTH.md  CHANGELOG_DEV_vs_MAIN.md  CHANGELOG_PROD_BETA.md  COMPLETE_INSTALLATION_SYSTEM.md  CONFIGURATION.md  CONFIG_MODULES_ARCHITECTURE.md  CONFIG_MODULES_QUICK_REFERENCE.md  CONFIG_MODULES_ROADMAP.md  CONFIG_MODULES_SUMMARY.md  DASHBOARD_VISUALIZATION_ARCHITECTURE.md  DEBUGGING_QUICK_REFERENCE.md  DEBUGGING_SUITE_MODERNIZATION.md  DEPLOYMENT_CHECKLIST.md  DRAG_DROP_DASHBOARD.md  DUPLICATE_DETECTION.md  DownloadsOrganizeR.sln  DownloadsOrganizeR.spec  EXE_BUILDER_GUIDE.md  FRAMEWORK_MIGRATION.md  HTMX_MIGRATION_PROGRESS.md  IMPLEMENTATION_COMPLETE.md  Install-And-Monitor-OrganizerService.ps1  JAVASCRIPT_MODULARIZATION.md  LICENSE  MODERN_UI_GUIDE.md  MODULAR_ARCHITECTURE.md  MODULAR_MIGRATION_COMPLETE.md  MODULAR_QUICKSTART.md  Monitor-OrganizerService.ps1  (+54 more)
.github/: copilot-instructions.md
OrganizerDashboard/: __init__.py  config_runtime.py  rate_limiting.py
SortNStoreDashboard/: __init__.py  cache.py  query_optimizer.py
dash/: base_page.html  config_modules.html  config_page.html  dashboard.html  dashboard_base.html  dashboard_config.html  dashboard_config_standalone.html  dashboard_scripts.html  dashboard_setup.html  debug_page.html  environment_test.html  force_password_change.html  login.html  (+1 more)
(+156 files in other folders)
